--- a/rest_api/src/main/resources/application.properties
+++ b/rest_api/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.sql.init.schema-locations=classpath:static/schema.sql
 spring.sql.init.data-locations=classpath:static/data.sql
+springdoc.swagger-ui.path=/swagger-ui.html
